--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
 
     <!-- CSS & Font Awesome -->
-    <link rel="stylesheet" href="stylesIndex.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" />
+   <link rel="stylesheet" href="stylesIndex.css" media="print" onload="this.media='all'">
+    <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" as="style">
   </head>
   </head>
   <body>
